--- a/certora/conf/VaultERC4626.conf
+++ b/certora/conf/VaultERC4626.conf
@@ -16,60 +16,39 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
-  "rule": [
-  // // //    "conversionWeakMonotonicity",
-  // // "assetsMoreThanSupply",
-    "contributingProducesShares",
-  // // // "depositMonotonicity",
-  // "dustFavorsTheHouse",
-  // // //    "noAssetsIfNoSupply",
-  // // //    "noSupplyIfNoAssets",
-  // // //    "supplyLessThanUnderlyingAsset",
-  // // //    "onlyContributionMethodsReduceAssets",
-  // // //    "reclaimingProducesAssets",
-  // // //    "redeemingAllValidity",
-  // // //    "totalsMonotonicity",
-  // // //    "vaultSolvency"
-  ],
+  // "rule": [
+  // // // //    "conversionWeakMonotonicity",
+  // // // "assetsMoreThanSupply",
+  // // "contributingProducesShares",
+  // // // // "depositMonotonicity",
+  // // "dustFavorsTheHouse",
+  // // // //    "noAssetsIfNoSupply",
+  // // // //    "noSupplyIfNoAssets",
+  // // // //    "supplyLessThanUnderlyingAsset",
+  //   "onlyContributionMethodsReduceAssets",
+  // // // //    "reclaimingProducesAssets",
+  // // // //    "redeemingAllValidity",
+  // // // //    "totalsMonotonicity",
+  // // // //    "vaultSolvency"
+  // ],
   // "method": "redeem(uint256,address,address)",
   // "method": "withdraw(uint256,address,address)",
   // "method" : "deposit(uint256,address)",
   // "method" : "mint(uint256,address)",
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
-  "prover_version" : "master",
+  "prover_version" : "yuvalbd/CERT-6495",
   // Performance tuning options below this line
   "solc_via_ir": true,
   "solc_optimize": "10000",
   "optimistic_loop": true, 
   "loop_iter": "2",
-  "prover_args" : [
-    "-smt_nonLinearArithmetic true",
-    "-adaptiveSolverConfig false",
-    "-splitParallel true"
-  ],
-  // assetsMoreThanSupply
   // "prover_args" : [
-  //   "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -splitParallel true -splitParallelInitialDepth 2 -depth 15 -s [z3:arith1,yices:def] -mediumTimeout 2 -splitParallelTimelimit 7200"
+  //   "-smt_nonLinearArithmetic true",
+  //   "-adaptiveSolverConfig false",
+  //   "-splitParallel true"
   // ],
-  // "prover_args": [
-  //   "-adaptiveSolverConfig false -depth 0 -smt_nonLinearArithmetic true"
-  // ],
-  // "prover_args": [
-  //   "-maxConcurrentTransforms INLINED_HOOKS:8",
-  //   "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -depth 0 "
-  // ]
-  // "prover_args": [
-		// "-smt_nonLinearArithmetic true -adaptiveSolverConfig false -depth 0 -s [z3:def{randomSeed=1},z3:def{randomSeed=2},z3:def{randomSeed=3},z3:def{randomSeed=4},z3:def{randomSeed=5},z3:def{randomSeed=6},z3:def{randomSeed=7},z3:def{randomSeed=8},z3:def{randomSeed=9},z3:def{randomSeed=10}]"
-	// ] ,
-  // old config
-  // "prover_args": [
-	// 	"-smt_nonLinearArithmetic true",
-	// 	"-adaptiveSolverConfig false",
-	// 	"-solvers [z3:def{randomSeed=1},z3:def{randomSeed=2},z3:def{randomSeed=3},z3:def{randomSeed=4},z3:def{randomSeed=5},z3:def{randomSeed=6},z3:def{randomSeed=7},z3:def{randomSeed=8},z3:def{randomSeed=9},z3:def{randomSeed=10}]",
-	// 	"-splitParallel true"
-	// ],
-  // "nondet_difficult_funcs": true,
-  // "smt_timeout": "7200"
+	"disable_auto_cache_key_gen": true,
+	"fe_version": "latest",
 }
 
