--- a/certora/conf/VaultERC4626-vaultSolvency-withdraw.conf
+++ b/certora/conf/VaultERC4626-vaultSolvency-withdraw.conf
@@ -27,9 +27,8 @@
   "optimistic_loop": true, 
   "loop_iter": "2",
   "prover_args" : [
-    "-smt_nonLinearArithmetic true",
-    "-adaptiveSolverConfig false",
-    "-splitParallel true"
+    "-smt_nonLinearArithmetic false",
+    "-timeoutCracker true",
   ],
   "smt_timeout": "7200",
 }
