--- a/certora/conf/EVault/modules/BalanceForwarder.conf
+++ b/certora/conf/EVault/modules/BalanceForwarder.conf
@@ -1,14 +1,14 @@
 {
   "files": [
-    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    "certora/helpers/DummyERC20A.sol",
+    "certora/harness/EVCHarness.sol",
     "src/EVault/modules/BalanceForwarder.sol",
     "certora/harness/BaseHarness.sol",
     "certora/harness/modules/BalanceForwarderHarness.sol",
   ],
   "link": [
-    "BalanceForwarderHarness:evc=EthereumVaultConnector",
+    "BalanceForwarderHarness:evc=EVCHarness",
   ],
   "verify": "BalanceForwarderHarness:certora/specs/BalanceForwarder.spec",
   "solc": "solc8.23",
@@ -18,8 +18,7 @@
   ],
   "prover_version": "master",
   "server" : "production",
-  // "coverage_info" : "advanced",
-  "parametric_contracts": ["BalanceForwarder"],
+  "parametric_contracts": ["BalanceForwarderHarness"],
   "prover_args": ["-smt_bitVectorTheory", "true"],
   "optimistic_loop": true, 
   "loop_iter": "2",
