Holy Grail first round of improvements

--- a/certora/conf/healthStatus/BalanceForwarderHealthStatus.conf
+++ b/certora/conf/healthStatus/BalanceForwarderHealthStatus.conf
@@ -23,7 +23,7 @@
   ],
   "build_cache": true,
   "prover_version": "master",
-  "server" : "production",
+  "server" : "staging",
   "parametric_contracts": ["BalanceForwarderHSHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
