--- a/certora/conf/healthStatus/GovernanceHealthStatus.conf
+++ b/certora/conf/healthStatus/GovernanceHealthStatus.conf
@@ -3,9 +3,10 @@
     "certora/harness/EVCHarness.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
+    "certora/helpers/DummyETokenA.sol",
+    "certora/helpers/DummyETokenB.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
-    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/GovernanceHSHarness.sol",
   ],
   "link": [
@@ -18,12 +19,11 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    // "accountsStayHealthy",
     "accountsStayHealthy_strategy"
   ],
   "build_cache": true,
   "prover_version": "master",
-  "server" : "production",
+  "server" : "staging",
   "parametric_contracts": ["GovernanceHSHarness"],
   // "prover_args": ["-smt_bitVectorTheory", "true"],
   "optimistic_loop": true, 
@@ -38,5 +38,5 @@
 		"-deleteSMTFile false",
 		"-smt_easy_LIA true"
 	],
-	"smt_timeout": "4800",
+  "smt_timeout": "28800",
 }
