--- a/certora/conf/healthStatus/InitializeHealthStatus.conf
+++ b/certora/conf/healthStatus/InitializeHealthStatus.conf
@@ -3,9 +3,10 @@
     "certora/harness/EVCHarness.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
+    "certora/helpers/DummyETokenA.sol",
+    "certora/helpers/DummyETokenB.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
-    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/InitializeHSHarness.sol",
   ],
   "link": [
@@ -18,11 +19,11 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy"
+    "accountsStayHealthy_strategy"
   ],
   "build_cache": true,
   "prover_version": "master",
-  "server" : "production",
+  "server" : "staging",
   "parametric_contracts": ["InitializeHSHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
@@ -36,5 +37,5 @@
 		"-deleteSMTFile false",
 		"-smt_easy_LIA true"
 	],
-	"smt_timeout": "4800",
+  "smt_timeout": "28800",
 }
