--- a/certora/conf/healthStatus/LiquidationHealthStatus.conf
+++ b/certora/conf/healthStatus/LiquidationHealthStatus.conf
@@ -3,9 +3,10 @@
     "certora/harness/EVCHarness.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
+    "certora/helpers/DummyETokenA.sol",
+    "certora/helpers/DummyETokenB.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
-    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/LiquidationHSHarness.sol",
   ],
   "link": [
@@ -18,12 +19,11 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    "accountsStayHealthy"
+    "accountsStayHealthy_strategy"
   ],
-  "method":"liquidate(address,address,uint256,uint256)",
   "build_cache": true,
   "prover_version": "master",
-  "server" : "production",
+  "server" : "staging",
   "parametric_contracts": ["LiquidationHSHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
@@ -35,5 +35,5 @@
 	"prover_args": [
 		" -smt_easy_LIA true"
 	],
-  "smt_timeout": "7200",
+  "smt_timeout": "28800",
 }
