--- a/certora/conf/healthStatus/BorrowingHealthStatus.conf
+++ b/certora/conf/healthStatus/BorrowingHealthStatus.conf
@@ -3,9 +3,10 @@
     "certora/harness/EVCHarness.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
+    "certora/helpers/DummyETokenA.sol",
+    "certora/helpers/DummyETokenB.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
-    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/BorrowingHSHarness.sol",
   ],
   "link": [
@@ -22,11 +23,11 @@
   ],
   // "method" : "borrow(uint256,address)",
   // "method" : "pullDebt(uint256,address)",
-  "method" : "repayWithShares(uint256,address)",
+  // "method" : "repayWithShares(uint256,address)",
   // "method" : "repay(uint256,address)",
   "build_cache": true,
   "prover_version": "master",
-  "server" : "production",
+  "server" : "staging",
   "parametric_contracts": ["BorrowingHSHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
@@ -36,12 +37,7 @@
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
 	"prover_args": [
-		" -timeoutCracker true"
+		"-smt_easy_LIA true"
 	],
-  "smt_timeout": "7200",
-	// "prover_args": [
-	// 	"-timeoutCracker true"
-	// ],
-  // "smt_timeout": "7200",
-  // "smt_timeout": "28800",
+  "smt_timeout": "28800",
 }
