--- a/certora/conf/healthStatus/LiquidateHealthStatus.conf
+++ b/certora/conf/healthStatus/LiquidateHealthStatus.conf
@@ -3,9 +3,10 @@
     "certora/harness/EVCHarness.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
+    "certora/helpers/DummyETokenA.sol",
+    "certora/helpers/DummyETokenB.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
-    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/LiquidationHSHarness.sol",
   ],
   "link": [
@@ -18,14 +19,14 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    // "liquidateAccountsStayHealthy_liquidator_no_debt_socialization",
+    "liquidateAccountsStayHealthy_liquidator_no_debt_socialization",
     "liquidateAccountsStayHealthy_liquidator_with_debt_socialization",
-    // "liquidateAccountsStayHealthy_not_violator"
+    "liquidateAccountsStayHealthy_not_violator"
   ],
   "method":"liquidate(address,address,uint256,uint256)",
   "build_cache": true,
   "prover_version": "master",
-  "server" : "production",
+  "server" : "staging",
   "parametric_contracts": ["LiquidationHSHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
@@ -37,5 +38,5 @@
 	"prover_args": [
     "-smt_easy_LIA true"
 	],
-  "smt_timeout": "7200",
+  "smt_timeout": "28800",
 }
