--- a/certora/conf/healthStatus/TokenHealthStatus.conf
+++ b/certora/conf/healthStatus/TokenHealthStatus.conf
@@ -3,9 +3,10 @@
     "certora/harness/EVCHarness.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
+    "certora/helpers/DummyETokenA.sol",
+    "certora/helpers/DummyETokenB.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
-    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/TokenHSHarness.sol",
   ],
   "link": [
@@ -22,7 +23,7 @@
   ],
   "build_cache": true,
   "prover_version": "master",
-  "server" : "production",
+  "server" : "staging",
   "parametric_contracts": ["TokenHSHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
@@ -36,5 +37,5 @@
 		"-deleteSMTFile false",
 		"-smt_easy_LIA true"
 	],
-	"smt_timeout": "4800",
+  "smt_timeout": "28800",
 }
