--- a/certora/conf/healthStatus/VaultHealthStatus.conf
+++ b/certora/conf/healthStatus/VaultHealthStatus.conf
@@ -3,10 +3,11 @@
     "certora/harness/EVCHarness.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
+    "certora/helpers/DummyETokenA.sol",
+    "certora/helpers/DummyETokenB.sol",
     "src/EVault/modules/Vault.sol",
     "src/EVault/modules/Token.sol",
     "certora/harness/BaseHarness.sol",
-    "certora/harness/TokenHarness.sol",
     "certora/harness/healthStatus/VaultHSHarness.sol",
   ],
   "link": [
@@ -19,13 +20,11 @@
       "forge-std=lib/forge-std/src"
   ],
   "rule" : [
-    // "accountsStayHealthy_strategy",
-    "accountsStayHealthy"
+    "accountsStayHealthy_strategy",
   ],
-  "method" : "redeem(uint256,address,address)",
   "build_cache": true,
   "prover_version": "master",
-  "server" : "production",
+  "server" : "staging",
   "parametric_contracts": ["VaultHSHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
@@ -39,5 +38,5 @@
 		"-deleteSMTFile false",
 		"-smt_easy_LIA true"
 	],
-	"smt_timeout": "4800",
+  "smt_timeout": "28800",
 }
