More conf and spec tweaking

--- a/certora/conf/healthStatus/VaultHealthStatus.conf
+++ b/certora/conf/healthStatus/VaultHealthStatus.conf
@@ -34,6 +34,7 @@
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
   "prover_args": [
+    "-maxConcurrentTransforms INLINED_HOOKS:8",
 		"-splitParallel true",
 		"-deleteSMTFile false",
 		"-smt_easy_LIA true"
