Various fixes to exchange rate work"

--- a/certora/conf/exchangeRate/BorrowingER.conf
+++ b/certora/conf/exchangeRate/BorrowingER.conf
@@ -4,12 +4,13 @@
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
     "certora/harness/BaseHarness.sol",
-    "certora/harness/modules/BorrowingHarness.sol",
+    "certora/harness/TokenHarness.sol",
+    "certora/harness/healthStatus/BorrowingHSHarness.sol",
   ],
   "link": [
-    "BorrowingHarness:evc=EVCHarness",
+    "BorrowingHSHarness:evc=EVCHarness",
   ],
-  "verify": "BorrowingHarness:certora/specs/ExchangeRateAllMethods.spec",
+  "verify": "BorrowingHSHarness:certora/specs/ExchangeRateAllMethods.spec",
   "solc": "solc8.23",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
@@ -18,7 +19,7 @@
   "prover_version": "master",
   "server" : "production",
   // "coverage_info" : "advanced",
-  "parametric_contracts": ["BorrowingHarness"],
+  "parametric_contracts": ["BorrowingHSHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
