--- a/certora/conf/exchangeRate/BorrowingERrepayWS.conf
+++ b/certora/conf/exchangeRate/BorrowingERrepayWS.conf
@@ -5,12 +5,12 @@
     "certora/helpers/DummyERC20A.sol",
     "certora/harness/BaseHarness.sol",
     "certora/harness/TokenHarness.sol",
-    "certora/harness/healthStatus/VaultHSHarness.sol",
+    "certora/harness/healthStatus/BorrowingHSHarness.sol",
   ],
   "link": [
-    "VaultHSHarness:evc=EVCHarness",
+    "BorrowingHSHarness:evc=EVCHarness",
   ],
-  "verify": "VaultHSHarness:certora/specs/ExchangeRateAllMethods.spec",
+  "verify": "BorrowingHSHarness:certora/specs/ExchangeRateAllMethods.spec",
   "solc": "solc8.23",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
@@ -18,8 +18,9 @@
   ],
   "prover_version": "master",
   "server" : "production",
+  "method": "repayWithShares(uint256,address)",
   // "coverage_info" : "advanced",
-  "parametric_contracts": ["VaultHSHarness"],
+  "parametric_contracts": ["BorrowingHSHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
@@ -27,4 +28,8 @@
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
+  "smt_timeout": "7200",
+	"prover_args": [
+		" -timeoutCracker true"
+	],
 }
