--- a/certora/conf/exchangeRate/RiskManagerER.conf
+++ b/certora/conf/exchangeRate/RiskManagerER.conf
@@ -4,6 +4,7 @@
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
     "certora/harness/BaseHarness.sol",
+    "certora/harness/TokenHarness.sol",
     "certora/harness/modules/RiskManagerHarness.sol",
   ],
   "link": [
