--- a/certora/conf/exchangeRate/TokenER.conf
+++ b/certora/conf/exchangeRate/TokenER.conf
@@ -4,12 +4,13 @@
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
     "certora/helpers/DummyERC20A.sol",
     "certora/harness/BaseHarness.sol",
-    "certora/harness/modules/TokenHarness.sol",
+    "certora/harness/TokenHarness.sol",
+    "certora/harness/healthStatus/TokenHSHarness.sol",
   ],
   "link": [
-    "TokenHarness:evc=EVCHarness",
+    "TokenHSHarness:evc=EVCHarness",
   ],
-  "verify": "TokenHarness:certora/specs/ExchangeRateAllMethods.spec",
+  "verify": "TokenHSHarness:certora/specs/ExchangeRateAllMethods.spec",
   "solc": "solc8.23",
   "packages": [
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
@@ -18,7 +19,7 @@
   "prover_version": "master",
   "server" : "production",
   // "coverage_info" : "advanced",
-  "parametric_contracts": ["TokenHarness"],
+  "parametric_contracts": ["TokenHSHarness"],
   "optimistic_loop": true, 
   "loop_iter": "2",
   "solc_via_ir": true,
