Fixes to RiskManager.conf

--- a/certora/conf/EVault/modules/RiskManager.conf
+++ b/certora/conf/EVault/modules/RiskManager.conf
@@ -1,14 +1,14 @@
 {
   "files": [
-    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/RiskManager.sol",
     "certora/harness/BaseHarness.sol",
+    "certora/harness/EVCHarness.sol",
     "certora/harness/modules/RiskManagerHarness.sol",
   ],
   "link": [
-    "RiskManagerHarness:evc=EthereumVaultConnector",
+    "RiskManagerHarness:evc=EVCHarness",
   ],
   "verify": "RiskManagerHarness:certora/specs/RiskManager.spec",
   "solc": "solc8.23",
