Liquidation CEX fix

--- a/certora/conf/EVault/modules/Liquidation.conf
+++ b/certora/conf/EVault/modules/Liquidation.conf
@@ -1,14 +1,14 @@
 {
   "files": [
-    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/Liquidation.sol",
     "certora/harness/BaseHarness.sol",
+    "certora/harness/EVCHarness.sol",
     "certora/harness/modules/LiquidationHarness.sol"
   ],
   "link": [
-    "LiquidationHarness:evc=EthereumVaultConnector",
+    "LiquidationHarness:evc=EVCHarness",
   ],
   "verify": "LiquidationHarness:certora/specs/Liquidation.spec",
   "solc": "solc8.23",
