--- a/certora/conf/Cache.conf
+++ b/certora/conf/Cache.conf
@@ -18,4 +18,7 @@
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
+  "prover_args" : [
+    "-timeoutCracker true"
+  ]
 }
