dustFavorsTheHouseAssets rule passing

--- a/certora/conf/Cache.conf
+++ b/certora/conf/Cache.conf
@@ -18,7 +18,5 @@
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
-  "prover_args" : [
-    "-timeoutCracker true"
-  ]
+  "smt_timeout": "7000"
 }
