ERC4626 script and cleanup. REAMEs for groups of confs

--- a/certora/conf/ERC4626Split/VaultERC4626-dustFavorsTheHouse.conf
+++ b/certora/conf/ERC4626Split/VaultERC4626-dustFavorsTheHouse.conf
@@ -1,6 +1,7 @@
 {
   "files": [
     "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
+    "src/EVault/modules/Vault.sol",
     "certora/helpers/DummyERC20A.sol",
     "certora/helpers/DummyERC20B.sol",
     "certora/harness/EVCHarness.sol",
@@ -15,9 +16,10 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  "rule": ["dustFavorsTheHouse",],
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
-  "prover_version" : "yuvalbd/CERT-6495",
+  "prover_version" : "master",
   // Performance tuning options below this line
   "solc_via_ir": true,
   "solc_optimize": "10000",
@@ -25,5 +27,6 @@
   "loop_iter": "2",
 	"disable_auto_cache_key_gen": true,
 	"fe_version": "latest",
+  "smt_timeout": "7200"
 }
 
