--- a/certora/conf/EVault/modules/Vault.conf
+++ b/certora/conf/EVault/modules/Vault.conf
@@ -1,14 +1,14 @@
 {
   "files": [
-    "lib/ethereum-vault-connector/src/EthereumVaultConnector.sol",
     "lib/ethereum-vault-connector/src/ExecutionContext.sol",
-    "lib/ethereum-vault-connector/lib/openzeppelin-contracts/contracts/token/ERC20/ERC20.sol",
+    "certora/helpers/DummyERC20A.sol",
     "src/EVault/modules/Vault.sol",
     "certora/harness/BaseHarness.sol",
+    "certora/harness/EVCHarness.sol",
     "certora/harness/modules/VaultHarness.sol",
   ],
   "link" : [
-    "VaultHarness:evc=EthereumVaultConnector",
+    "VaultHarness:evc=EVCHarness",
   ],
   "verify": "VaultHarness:certora/specs/Vault.spec",
   "solc": "solc8.23",
