setup for staging for vaultSolvency, splitting for base conf

--- a/certora/conf/ERC4626Split/VaultERC4626-vaultSolvency-withdraw.conf
+++ b/certora/conf/ERC4626Split/VaultERC4626-vaultSolvency-withdraw.conf
@@ -20,6 +20,7 @@
   "method": "withdraw(uint256,address,address)",
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
+  "server": "staging", // 10 hour queue
   "prover_version" : "master",
   // Performance tuning options below this line
   "solc_via_ir": true,
@@ -29,6 +30,7 @@
 	"prover_args": [
 		"-smt_nonLinearArithmetic true -adaptiveSolverConfig false -depth 0"
   ],
-  "smt_timeout": "7200",
+  // "smt_timeout": "7200",
+  "smt_timeout": "28800",
 }
 
