--- a/certora/conf/ERC4626Split/VaultERC4626-vaultSolvency-most.conf
+++ b/certora/conf/ERC4626Split/VaultERC4626-vaultSolvency-most.conf
@@ -19,6 +19,7 @@
   "rule": ["vaultSolvency"],
   "parametric_contracts": ["ERC4626Harness"],
   "build_cache": true,
+  "server": "staging", // 10 hour queue
   "prover_version" : "master",
   // Performance tuning options below this line
   "solc_via_ir": true,
@@ -28,6 +29,7 @@
   "prover_args" : [
     "-smt_nonLinearArithmetic false",
   ],
-  "smt_timeout": "7200",
+  // "smt_timeout": "7200",
+  "smt_timeout": "28800",
 }
 
