Fix linking for EToken collateral

--- a/certora/conf/healthStatus/ETokenCollateralHealthStatus.conf
+++ b/certora/conf/healthStatus/ETokenCollateralHealthStatus.conf
@@ -11,6 +11,7 @@
   ],
   "link": [
     "BalanceForwarderHSHarness:evc=EVCHarness",
+    "DummyETokenA:evc=EVCHarness",
   ],
   "verify": "BalanceForwarderHSHarness:certora/specs/HealthStatusInvariant.spec",
   "solc": "solc8.23",
