--- a/certora/conf/healthStatus/ETokenCollateralHealthStatus.conf
+++ b/certora/conf/healthStatus/ETokenCollateralHealthStatus.conf
@@ -33,10 +33,10 @@
   "rule_sanity": "basic",
   "function_finder_mode" : "relaxed",
   "finder_friendly_optimizer" : false,
-  "prover_args": [
-		"-splitParallel true",
-		"-deleteSMTFile false",
-		"-smt_easy_LIA true"
-	],
-	"smt_timeout": "4800",
+ //  "prover_args": [
+	// 	"-splitParallel true",
+	// 	"-deleteSMTFile false",
+	// 	"-smt_easy_LIA true"
+	// ],
+  "smt_timeout": "28800",
 }
