Timeout debugging for exchange rate monotonicity

--- a/certora/conf/exchangeRate/BorrowingER.conf
+++ b/certora/conf/exchangeRate/BorrowingER.conf
@@ -16,8 +16,14 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  "method": "repayWithShares(uint256,address)",
+  "prover_args": [
+    "-depth 20",
+  ],
   "prover_version": "master",
   "server" : "production",
+  "smt_timeout": "7000",
+  // "smt_timeout": "22800",
   // "coverage_info" : "advanced",
   "parametric_contracts": ["BorrowingHSHarness"],
   "optimistic_loop": true, 
