--- a/certora/conf/exchangeRate/VaultER.conf
+++ b/certora/conf/exchangeRate/VaultER.conf
@@ -16,8 +16,13 @@
       "ethereum-vault-connector=lib/ethereum-vault-connector/src",
       "forge-std=lib/forge-std/src"
   ],
+  "prover_args": [
+    "-depth 20",
+  ],
   "prover_version": "master",
   "server" : "production",
+  "smt_timeout": "7000",
+  // "smt_timeout": "22800",
   // "coverage_info" : "advanced",
   "parametric_contracts": ["VaultHSHarness"],
   "optimistic_loop": true, 
