Add rule about LTV parameter assumptions

--- a/certora/conf/EVault/modules/Governance.conf
+++ b/certora/conf/EVault/modules/Governance.conf
@@ -22,6 +22,7 @@
       "forge-std=lib/forge-std/src"
   ],
   "prover_version": "master",
+  "build_cache": true,
   // Performance tuning options below this line
   "solc_via_ir": true,
   "solc_optimize": "10000",
