--- a/certora/conf/EVault/modules/Liquidation.conf
+++ b/certora/conf/EVault/modules/Liquidation.conf
@@ -22,6 +22,7 @@
   "prover_version": "master",
   "server" : "production",
   // "coverage_info" : "advanced",
+  "build_cache": true,
   // Performance tuing options below this line
 	"prover_args": [
 		"-depth 10",
