--- a/certora/conf/EVault/modules/RiskManager.conf
+++ b/certora/conf/EVault/modules/RiskManager.conf
@@ -19,6 +19,7 @@
   "parametric_contracts": ["RiskManagerHarness"],
   "rule_sanity": "basic",
   "server": "production",
+  "build_cache": true,
   // "coverage_info" : "advanced",
   // Performance tuning options below this line
 	"prover_args": [
