--- a/certora/conf/EVault/modules/BalanceForwarder.conf
+++ b/certora/conf/EVault/modules/BalanceForwarder.conf
@@ -19,6 +19,7 @@
   "prover_version": "master",
   "server" : "production",
   "parametric_contracts": ["BalanceForwarderHarness"],
+  "build_cache": true,
   "prover_args": ["-smt_bitVectorTheory", "true"],
   "optimistic_loop": true, 
   "loop_iter": "2",
